more comments on limitations

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -24,8 +24,9 @@
 scales, intervals or licks on a diatonic (richter) or chromatic
 harmonica for various keys.
 
-The wise is limited to play and recognize single notes only, so that
-e.g. chords or octaves are out of its reach.
+The wise is limited to play and recognize single notes only; it has no
+sense of chords or grooves. So from the three ingredients of music,
+melody, harmony and rhythm, it can help you with the melody only.
 
 The primary documentation of harpwise is its usage information, that
 can be retrieved by calling it without arguments:
