rotate scales; bugfixes

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -101,7 +101,7 @@ harpwise listen blues
 
 The possible scales depend on the chosen type of harmonica:
 
-<%=types_content%>
+<%=types_with_scales%>
   
 .SH OPTIONS
 
