--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -126,6 +126,10 @@ The toplevel file README.org, also available at:
 https://github.com/marcIhm/harpwise/blob/main/README.org
 .RE
 
+.SH USER CONFIGURATION
+
+~/.harpwise/config.ini
+
 .SH EXAMPLES
 
 See the usage information of the individual modes.
