--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -62,7 +62,7 @@ and, perhaps less frequently used:
 Wise plays scales, holes or licks, not asking you to play them back
 .IP -
 .B print:
-print and annottate the holes of scales or licks from the commandline
+print and annotate the holes of scales or licks given on the commandline
 .IP -
 .B report: 
 Produce reports about licks and tags or a journal of licks played
