move functions of mode report to other modes

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -61,10 +61,8 @@ And with a less interactive interface and not using your microphone:
 Wise plays scales, holes or licks, not asking you to play them back
 .IP -
 .B print:
-print and annotate the holes of scales or licks given on the commandline
-.IP -
-.B report: 
-Produce reports about licks and tags or a journal of licks played
+print and annotate the holes of scales or licks given on the commandline.
+Also print various informationo about licks, scales and much more
 .IP -
 .B tools: 
 Some simple, non-interactive tools related to basic harmonica theory		
