--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -154,7 +154,17 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 .SH "QUICK START"
 
+Prepare your personal config with sound samples:
+
+.IP
+harpwise calibrate c --auto    
+.RE
+
+Feedback on what you are playing:
+
+.IP
 harpwise listen c
+.RE
 
 then blow your harp and come back later to learn about other modes.
 
