wording and handling

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -47,12 +47,12 @@ specifies the mode of operation; it can be one of:
 .B listen:
 The wise listens to your playing, e.g. to monitor bends or scales
 .IP -
-.B licks: 
-Learn licks (only a few included, but pointers to find more)
-.IP -
 .B quiz: 
 Train your ear, memory and knowledge of music theory. This is
 actually fun and a great way to start with harpwise.
+.IP -
+.B licks: 
+Learn licks (only a few included, but pointers to find more)
 .RE
 
 And with a less interactive interface and not using your microphone:
@@ -188,7 +188,15 @@ Feedback on what you are playing:
 harpwise listen c
 .RE
 
-then blow your harp and come back later to learn about other modes.
+then blow your harp and get feedback.
+
+Or
+
+.IP
+harpwise quiz random
+.RE
+
+for a fun way to improve you musical skills.
 
 .SH EXAMPLES
 
