new chords; handling

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -48,8 +48,9 @@ specifies the mode of operation; it can be one of:
 The wise listens to your playing, e.g. to monitor scales or bends
 .IP -
 .B quiz:
-Train your ear, memory and knowledge of music theory. This is actually
-fun and a engaging way to start with harpwise.
+Train your ear, memory and knowledge of music theory with many
+different flavours. This is actually fun and an engaging way to start
+with harpwise.
 .IP -
 .B licks: 
 Learn licks (some included and pointers for more)
@@ -145,11 +146,9 @@ The possible scales depend on the chosen type of harmonica:
 .SH "OPTIONS"
 
 Besides the arguments for type, key and scale, there are a lot of
-options (introduced by '-'), some requiring an argument themselves.
-All options are described in the usage info of the various modes.
-
-Most arguments and options can be abbreviated, e.g 'lis'
-for 'listen', 'cal' for 'calibrate' or '-t' for '--tags-any'.
+options (introduced by '-' or '--'), some requiring an argument
+themselves.  Options are specific for each mode and are describe, if
+you give the special option '-o'.
 
 Also note, that for most modes, the behaviour (e.g. the kind of
 display) of the wise can be changed interactively; type 'h' to see
