--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -45,15 +45,16 @@ When invoking harpwise, the first argument on the commandline
 specifies the mode of operation; it can be one of:
 .IP - 2
 .B listen:
-The wise listens to your playing, e.g. to monitor scales or bends
+The wise listens to your playing (e.g. for scales or bends)
+and helps to steer through a chord progression
 .IP -
 .B quiz:
 Train your ear, memory and knowledge of music theory with many
-different flavours. This is actually fun and an engaging way to start
-with harpwise.
+different flavours. This is actually a fun way to start.
 .IP -
 .B licks: 
-Learn licks (some included and pointers for more)
+Learn licks (some included, pointers for more) as a
+starting point for improvisations.
 .RE
 
 And, less interactive:
@@ -210,9 +211,7 @@ Feedback on what you are playing:
 harpwise listen c
 .RE
 
-then blow your harp.
-
-Or
+Or try
 
 .IP
 harpwise quiz random
