fix for sample delete

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -213,7 +213,7 @@ Or try
 harpwise quiz random
 .RE
 
-for a fun way to improve you musical skills.
+for a fun way to improve you harmonica knowledge.
 
 .SH EXAMPLES
 
