user-defined scales

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -143,7 +143,10 @@ blues-scale, which are given as arguments and form an adhoc scale:
 The possible scales depend on the chosen type of harmonica:
 
 <%=types_with_scales%>
-  
+
+Note that advanced users may try to create their own scales, see usage
+of mode tools for an example
+
 .SH "OPTIONS"
 
 Besides the arguments for type, key and scale, there are a lot of
