--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -24,10 +24,6 @@
 intervals, licks or bends on a diatonic (richter) or chromatic
 harmonica for various keys.
 
-The wise recognizes single notes, that you play and it may play chords
-for you, but can not identify your chords. It knows a thing or two
-about tempo, but not about rhythm.
-
 The primary documentation of harpwise is its usage information, that
 can be retrieved by calling it without arguments:
 .IP
@@ -57,7 +53,7 @@ Learn licks (some included, pointers for more) as a
 starting point for improvisations.
 .IP -
 .B jamming:
-harpwise helps you to jam along a backing-track.
+harpwise helps to jam along a backing-track.
 .RE
 
 And, less interactive:
@@ -71,14 +67,12 @@ print and annotate the holes of scales or licks given on the commandline.
 Also print various informationo about licks, scales and much more
 .IP -
 .B tools: 
-Some simple, non-interactive tools related to basic harmonica theory		
+Some non-interactive tools related to basic harmonica theory		
 .IP -
 .B samples:
 The wise assists in recording your own samples or generates them for
 you; this is a prerequisite for using many other modes, so you will be
-asked to invoke it, when necessary. Note, that for convenience, type 'richter'
-and key of 'c' does not require this, as the relevant
-samples are already included.
+asked to invoke it, when necessary
 .RE
 
 to read more details, usage examples and options for the individual
@@ -160,6 +154,11 @@ request, i.e. if you give the special option '-o'.
 Also note, that for most modes, the behaviour of the wise (e.g. the
 ways of display or comment) can be changed interactively; type 'h' to
 see help on this.
+
+The wise offers a broad set of features that can support your practice for
+a long time. However, it also has its limitations: The wise recognizes
+single notes and it may play chords for you, but it can not identify your
+chords. It knows a bit about tempo, but has no notion of rhythm.
 
 .SH "SUGGESTED READING"
 
