jamming use and transmit specified key

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -204,7 +204,7 @@ to execute two basic tests and get some advice.
 
 .SH "QUICK START"
 
-Feedback on what you are playing:
+Feedback on holes and notes you are playing:
 
 .IP
 harpwise listen c
@@ -216,7 +216,7 @@ or:
 harpwise quiz random
 .RE
 
-for a fun way to improve your harmonica knowledge
+for a playful way to improve your harmonica knowledge
 
 or:
 
@@ -224,7 +224,7 @@ or:
 harpwise jam along 12
 .RE
 
-to jam along a 12bar-blues.
+for a guided jam along a 12bar-blues.
 
 .SH EXAMPLES
 
