--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -8,7 +8,7 @@
 .SH "NAME"
 
 .B harpwise
-- practice harmonica with your microphone and speaker
+- A harmonica tool for the command line, using microphone and speaker.
 
 .SH "SYNOPSIS"
 
@@ -20,9 +20,9 @@
 .SH "DESCRIPTION"
 
 .B harpwise
-('wise' for short) supports the daily practice of scales,
-intervals, licks or bends on a diatonic (richter) or chromatic
-harmonica for various keys.
+supports your daily practice with scales and licks. It offers
+various tools, an explorable quiz and may guide your jamming. It can be
+used with diatonic (richter) or chromatic harmonicas in different keys.
 
 The primary documentation of harpwise is its usage information, that
 can be retrieved by calling it without arguments:
@@ -60,7 +60,7 @@ And, less interactive:
 
 .IP - 2
 .B play: 
-Wise plays scales, holes, licks, intervals, chords, etc.
+The wise plays scales, holes, licks, intervals, chords, etc.
 .IP -
 .B print:
 print and annotate the holes of scales or licks given on the commandline.
@@ -203,7 +203,7 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 ~/.harpwise/config.ini
 
-.SH "COMMANDLINE OPTIONS"
+.SH "COMMAND-LINE OPTIONS"
 
 Options are specific for each mode; as an example you may type
 
