--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -231,7 +231,7 @@ to execute two basic tests and get some advice.
 
 .SH "QUICK START"
 
-Feedback on holes and notes you are playing:
+Feedback on holes and notes you play:
 
 .IP
 harpwise listen c
