--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -201,7 +201,7 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 .SH "USER CONFIGURATION"
 
-~/.harpwise/config.ini
+~/harpwise/config.ini
 
 .SH "COMMAND-LINE OPTIONS"
 
