jamming comment and stats

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -236,7 +236,7 @@ with sound or if you see spurious error messages, you may invoke:
 harpwise tools diag
 .RE
 
-to execute two basic tests and get some advice.
+to execute some basic tests and get advice on how to fix common problems.
 
 .SH "QUICK START"
 
