--- a/snap/snapcraft.yaml.erb
+++ b/snap/snapcraft.yaml.erb
@@ -9,6 +9,7 @@ name: harpwise
 # is 3.1 and core22 only includes 3.0
 base: core24
 
+title: harpwise
 version: '<%= File.read('/home/ihm/git/harpwise/resources/version.txt').chomp %>'
 summary: A harmonica tool for the command line, using microphone and speaker
 description: |
@@ -17,6 +18,8 @@ description: |
   It can be used with diatonic (richter) or chromatic harmonicas in
   different keys.
 license: 'MIT'
+contact: marc@ihm.name
+website: https://github.com/marcIhm/harpwise
 grade: stable
 confinement: strict
 
