steps towards github pages

--- a/resources/harpwise.man.erb
+++ b/resources/harpwise.man.erb
@@ -155,8 +155,8 @@ The possible scales depend on the chosen type of harmonica:
 
 <%=types_with_scales%>
 
-Note that advanced users may try to create their own scales, see usage
-of mode tools for an example
+Note that advanced users may try to create their own scales. See
+usage of mode tools for an example.
 
 .SH "OPTIONS"
 
